--- a/Demo20181220.ipynb
+++ b/Demo20181220.ipynb
@@ -55,346 +55,390 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "soup = BeautifulSoup(res.text, 'lxml')\n",
+    "#for q in soup.select('.eventgoldtitle02 strong'):\n",
+    "questions = []\n",
+    "for q in soup.select('.style01-1'):\n",
+    "    questions.append(q.text)\n",
+    "#questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answers = []\n",
+    "for a in soup.select('#QAContent p'):\n",
+    "    answers.append(a.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "questions = [q.text for q in soup.select('.style01-1')]\n",
+    "answers   = [a.text for a in soup.select('#QAContent p')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<zip at 0x107b90148>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip(questions, answers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for rec in zip(questions, answers):\n",
+    "#    print(rec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "ctbc_qa = pandas.DataFrame(list(zip(questions, answers)), columns = ['question', 'answer'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ctbc_qa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache /var/folders/46/b7dzk4mn6g54qzptv608w7d00000gn/T/jieba.cache\n",
+      "Loading model cost 0.924 seconds.\n",
+      "Prefix dict has been built succesfully.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "毀補\n",
+      "後\n",
+      "多久\n",
+      "可補\n",
+      "發新卡\n",
+      "?\n",
+      " \n",
+      "會不會\n",
+      "另\n",
+      "要\n",
+      "收費\n",
+      "？\n"
+     ]
+    }
+   ],
+   "source": [
+    "import jieba\n",
+    "for w in jieba.cut('毀補後多久可補發新卡? 會不會另要收費？'):\n",
+    "    print(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['毀補', '後', '多久', '可補', '發新卡', '?', ' ', '會不會', '另', '要', '收費', '？']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(jieba.cut('毀補後多久可補發新卡? 會不會另要收費？'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jieba.load_userdict('userdict.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['毀補', '後', '多久', '可', '補發', '新卡', '?', ' ', '會不會', '另', '要', '收費', '？']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(jieba.cut('毀補後多久可補發新卡? 會不會另要收費？'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence='那我們酸民婉君也可以報名嗎'\n",
+    "len(sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請問核卡後，收到的信用卡權益手冊，要看嗎?\n",
-      "我才剛收到卡片卻無法使用該如何處理？\n",
-      "信用卡開卡完成何時才能使用？\n",
-      "請問有哪些開卡方式?\n",
-      "為何語音開卡時，語音回覆系統無法連線，請與卡片背面發卡銀行連繫...?\n",
-      "語音開卡是否為24小時作業?\n",
-      "是否只新卡才須開卡?\n",
-      "請問刷卡一定是免簽名嗎?\n",
-      "卡片簽名是否一定要簽英文？\n",
-      "請問我何時會收到帳單？\n",
-      "我沒有收到實體帳單，請問要如何補寄?\n",
-      "我要申請電子信用卡帳單，請問該如何申請？ \n",
-      "請問申請電子帳單需要費用嗎？\n",
-      "我申請電子帳單後怎麼都收不到電子帳單呢？\n",
-      "我要申請補寄電子信用卡帳單，請問該如何辦理？\n",
-      "我想變更電子郵件信箱，請問該如何辦理？\n",
-      "這個月帳單我目前未收到，如何申請補寄到我的帳單地址？\n",
-      "同一家商店只消費一筆，為什麼帳單會有兩筆以上之消費請款？\n",
-      "已經將商品退回了，為什麼還跟我收錢？\n",
-      "帳單上有一筆非本人消費該如何處理？\n",
-      "我有向你們反映爭議帳款，怎麼都沒有接到通知？什麼時候才會知道調查結果？\n",
-      "沒有出國，但帳單上有一筆國外消費，該如何處理？\n",
-      "旅館訂房、退房\n",
-      "信用卡額度是如何核定的?\n",
-      "請問貴行的固定額度是卡片共用的嗎?\n",
-      "請問貴行是否會主動幫我調高固定額度？\n",
-      "如何調高信用卡固定額度?\n",
-      "為何調高固定額度還要附財力證明?\n",
-      "如何申請調高臨時額度？\n",
-      "臨時額度調整後之金額是否也可使用循環信用繳納，並有無其它用卡需注意的呢？\n",
-      "如何辦理退貨？\n",
-      "國外郵購應注意事項\n",
-      "國外購物退稅問題\n",
-      "什麼是全球080？\n",
-      "若在國外可否用手機撥打全球080免付費電話呢？\n",
-      "如何利用ATM繳款？\n",
-      "請問語音如何查詢帳單金額？\n",
-      "該如何在郵局劃撥繳款?\n",
-      "親自臨櫃繳款方式?\n",
-      "如何辦理自動扣繳？\n",
-      "本行快速存繳款機繳款方式?\n",
-      "本行現金存款機繳款?\n",
-      "如何利用網路銀行繳交信用卡款?\n",
-      "統一超商繳款方式?\n",
-      "如何利用ｉ繳費APP繳交信用卡款?\n",
-      "我的卡片無法使用、刷不出來，是否為卡片毀損？\n",
-      "卡片毀損如何申請補發？\n",
-      "毀補後多久可補發新卡? 會不會另要收費？\n",
-      "請問我毀補卡片後，舊卡是否就無法使用?\n",
-      "遺失卡片應如何辦理掛失手續？何時補發新卡？\n",
-      "若您尚無法確定卡片是否遺失(想再找找看)時，應如何辦理？\n",
-      "卡片遺失辦理掛失，手續費如何計算？\n",
-      "請問掛失收費100元是什麼費用？\n",
-      "如果我的正卡掛失後，附卡還可以用嗎?\n",
-      "掛失卡片後，若有發生不是我的消費款，我要付負擔嗎?\n",
-      "如何使用機場停車?\n",
-      "中國信託信用卡配合的停車場為何?\n",
-      "請問停車場的營業時間是到幾點?\n",
-      "中國信託信用卡的停車優惠為何?\n",
-      "若客戶持有正附卡其停車天數如何計算? 若客戶持有正附卡其停車天數如何計算?\n",
-      "年度的停車次數或停車天數之計算時點為何?\n",
-      "若我在使用機場停車服務時，覺得權益受到損害時，應如何處理？\n",
-      "營業車(計程車)無法登錄道路救援是否可使用機場停車服務？\n",
-      "何謂旅遊平安險?\n",
-      "如果我遇到航空公司促銷，買到折扣價的機票，那是否享有保障？\n",
-      "所謂公共運輸工具是指哪些?\n",
-      "請問旅遊保險的對象是?請問旅遊保險的對象是?\n",
-      "請問如何投保旅遊保險?\n",
-      "請問班機起飛前與到達目的地後５小時內是否屬傷害險之保障期間？交通工具是否限制必須是公共運輸工具？\n",
-      "若出國旅遊包機者，可享有保障嗎？\n",
-      "如果我只是單純的購買機票，是不是一定要全額刷卡才有保險呢？\n",
-      "如何可使用機場貴賓室?\n",
-      "請問有哪些貴賓室提供服務?\n",
-      "我有刷機票或團費了，使用機場貴賓室前還需要預約嗎?\n",
-      "我要如何申請龍騰卡？需要準備甚麼資料嗎？\n",
-      "申請龍騰卡後，要怎麼使用貴賓室?\n",
-      "我沒有消費團費跟機票，但是我想要使用海外貴賓室服務，可以申請龍騰卡嗎？\n",
-      "請問我可以同一天進去同一個機場貴賓室兩次嗎?\n",
-      "如果客戶跟我太太都有中信卡，但小孩是3歲，可以帶小孩進去嗎?\n",
-      "為何有些機場貴賓室是可以攜伴，但有的不行?\n",
-      "道路救援的服務時間及範圍？\n",
-      "請問道路救援的服務專線是?\n",
-      "道路救援服務項目有哪些?\n",
-      "如何登錄/變更車籍資料?\n",
-      "如何使用道路救援服務?\n",
-      "是否所有車輛都可以登錄道路救援?\n",
-      "如果現場需要支付費用，可以用哪種方式?\n",
-      "請問語音登錄車輛廠牌時，如何轉換成數字?\n",
-      "如果在高速公路被強排，可否申請退費?\n",
-      "我持有大中華攜手飛聯名卡，為什麼無法於中信專屬平台(官網/中信卡APP)完成航空會員登錄？\n",
-      "大中華攜手飛聯名卡如何申請晉升四大航空菁英會員？\n",
-      "持有大中華卡，透過指定網站購票卻沒有折扣? 與一般信用卡網路購票價格相同？\n",
-      "「ANA極緻卡」主要的特色為何？\n",
-      "ANA極緻卡本次推出的3D卡面，請問它有什麼樣的特色？\n",
-      " 如何在Apple Pay 中加入中信卡？\n",
-      "哪些地方可以使用Apple Pay？\n",
-      "如何使用Apple Pay付款？\n",
-      "Apple Pay適用裝置？\n",
-      "Line Pay是什麼?\n",
-      "如何註冊LINE Pay帳號?\n",
-      "如何於實體商店使用LINE Pay?\n",
-      "LINE Pay支付方式及可以在哪些店家使用呢?\n",
-      "LINE Points折抵比例及哪裡可以折抵?\n",
-      "LINE Pay支付要綁定信用卡怎麼操作呢?\n",
-      "刷LINE Pay卡消費LINE Points回饋%數為何?\n",
-      "使用LINE Pay卡消費後，多久可收到消費回饋的LINE Points?\n",
-      "我今天(11/10)LINE Pay卡完成交易及綁定，但先刷卡後才綁定這樣這筆消費可以獲得LINE Points嗎?\n",
-      "LINE Pay卡解除綁定，原本的LINE Points會不見嗎?\n",
-      "原本LINE Pay卡有消費尚未請款，因卡片遺失已申請掛失處理，但部份交易店家未請款，是否會影響到LINE Points回饋??\n",
-      "如何查詢消費累積的LINE Points呢?\n",
-      "請問LINE Pay卡消費累積的LINE Points點數有使用期限嗎?\n",
-      "請問LINE Pay卡消費累積的LINE Points點數是「限時點數」還是「一般點數」?\n",
-      "我要怎麼知道這筆交易LINE Points點數的效期呢?\n",
-      "LINE Points點數到期前是否會通知我呢? \n",
-      "LINE Points折抵比例及哪裡可以折抵?\n",
-      "點數可以折抵消費嗎? 我要怎麼查詢哪些店家可以使用?\n",
-      "「全家便利商店」可以開啟條碼支付勾選LINE Point折抵消費，折抵方式是?\n",
-      "我習慣在網路上消費，有哪些網路店家可以折抵消費呢? 使用方式是什麼?\n",
-      "LINE Points可以兌換其它商品嗎? 有百貨公司商品券或其它商品券嗎? \n",
-      "請問LINE Pay行動支付與LINE Pay卡別差是?\n",
-      "如何申請LINE Pay信用卡?\n",
-      "LINE Pay信用卡5個版面，有申請限制嗎?  \n",
-      "想辦一張LINE Pay信用卡給家人，版面須與正卡人相同嗎? \n",
-      "LINE Pay支付要綁定信用卡怎麼操作呢?\n",
-      "如何申請中信信用卡代扣繳公用事業費用代扣繳?\n",
-      "使用中信信用卡代扣繳水電、瓦斯、電信費、公有路邊停車費、eTag自動儲值等是否需要負擔手續費?\n",
-      "使用中信信用卡代扣繳水電、瓦斯、電信費、公有路邊停車費、eTag自動儲值等是否有提供回饋?\n",
-      "只要中信卡友都可申請代扣繳水電、瓦斯、電信費、公有路邊停車費、eTag自動儲值等費用嗎?\n",
-      "如何申請中信信用卡代扣繳eTag自動儲值?\n",
-      "是否有開放中信信用卡代扣繳eTag?\n",
-      "eTag自動儲值/智慧停車可以扣家人的車嗎?車主的身分有限制嗎?\n",
-      "Q：市面上保險公司那麼多家、產品類型這麼多種，該如何選擇最適合自己的保險呢？\n",
-      "Q：相較於跟保險業務員購買保單，透過中國信託商業銀行購買保單我可以享有什麼不一樣的服務呢？\n",
-      "Q：如果購買保單之後有需要調整或變更保單內容時該怎麼辦呢？\n",
-      "Q：為什麼保單上之個人基本資料有異動時一定要通知保險公司？\n",
-      "Q：臨時要出國忘了買旅平險，我可以透過中國信託商業銀行來購買嗎？\n",
-      "Q：除了親洽中國信託商業銀行分行的保險代理業務專區，如果不方便親自到分行時，我還可以找誰服務呢？\n",
-      "Q：我要申請理賠，請問要準備那些資料呢？\n",
-      "Q：我要申請理賠，保單以前是在北部的中國信託商業銀行分行購買的，但現在人在南部，誰可以協助我呢？\n",
-      "如何申請數位外幣帳戶？\n",
-      "開戶應攜帶什麼文件?\n",
-      "辦理換摺/卡片/網銀...等業務，需要到原本開戶的分行嗎? \n",
-      "存款人亡故，須徵提何種文件以辦理相關繼承事宜？ \n",
-      "如何辦定存?\n",
-      "定存到期之後，會自動轉存至帳戶嗎？\n",
-      "我要如何申請/取消定存質借的功能?\n",
-      "我有一筆定存質借，請問每個月幾號要繳利息?\n",
-      "我在城中分行的綜合存款中有好幾筆定存，請問可以用補摺機補登定存明細嗎？可以到雙和分行補登嗎？\n",
-      "我昨天用電話辦一筆定存NT$20萬，請問如何知道已辦妥了？\n",
-      "我的定存還沒到期，辦理提前解約利息會怎麼算？\n",
-      "定存續存的利率和原定存利率一樣嗎？\n",
-      "何謂NCD？\n",
-      "NCD可以質借嗎？\n",
-      "NCD利息如何計算？\n",
-      "如何辦理掛失NCD？\n",
-      "分行是否有提供買賣外幣現鈔服務呢？\n",
-      "從外幣帳戶提領外幣現鈔，是否需支付手續費呢？ \n",
-      "若我有沒用完的外幣現鈔，可否存入我的外幣帳戶呢？ \n",
-      "購買人民幣現鈔金額是否有相關限制？ \n",
-      "拿人民幣外幣現鈔存入外幣帳戶，有無金額限制？ \n",
-      "請問貴公司的 swift code 為何?\n",
-      "若親友欲從國外匯入款項至我的銀行帳戶，我該提供什麼資料？ \n",
-      "怎樣將款項匯給國外親友? \n",
-      "為何我無法使用網路銀行「台外幣/外幣轉帳」功能？有什麼身分限制嗎？\n",
-      "「台外幣/外幣轉帳」可否預約轉帳？\n",
-      "「台外幣/外幣轉帳」轉出及轉入帳號有無限制？\n",
-      "「台外幣/外幣轉帳」交易金額有無限制？\n",
-      "什麼時間可以做網銀/行動銀行換匯交易？\n",
-      "什麼是「匯率到價提醒」服務？\n",
-      "\n",
-      "如何申請晶片金融卡? \n",
-      "晶片金融卡有哪些用途？\n",
-      "使用金融卡須注意哪些事項？\n",
-      "使用中國信託晶片金融卡提款、轉帳需要費用嗎？ \n",
-      "晶片金融卡如何辦理掛失？ \n",
-      "晶片金融卡密碼忘記或連續錯誤三次遭鎖卡時，該如何處理?\n",
-      "請問利用金融卡轉帳是否須另外申請？\n",
-      "可否將名下所有的帳戶共用一張金融卡？\n",
-      "如何申請金融卡跨國提款功能？\n",
-      "什麼是金融卡消費扣款？\n",
-      "晶片金融卡「消費扣款」服務可以在網路使用嗎？\n",
-      "持卡人使用晶片金融卡「消費扣款」服務的流程為何？\n",
-      "晶片金融卡「消費扣款」跟簽帳金融卡刷卡消費有何不同？\n",
-      "晶片金融卡受損，如何申請補發新卡？\n",
-      "中國信託簽帳金融卡可以進行分期交易嗎？\n",
-      "中國信託簽帳金融卡有刷卡金額限制嗎？\n",
-      "學生也可以辦中國信託簽帳金融卡嗎？\n",
-      "在國外使用中國信託簽帳金融卡提款密碼和國內一樣嗎？\n",
-      "中國信託簽帳金融卡可以在網路上交易嗎？\n",
-      "簽帳金融卡卡片到期，還可以用嗎？\n",
-      "中國信託信用卡享有的優惠，簽帳金融卡也有嗎？\n",
-      "我的手機號碼換了，要如何才能收到簽帳金融卡貼心消費確認簡訊？\n",
-      "中國信託簽帳金融卡可以在國外刷卡嗎？\n",
-      "我的通訊地址換了，要如何更改？\n",
-      "我申請信用卡被銀行拒絕，還可以辦簽帳金融卡嗎？\n",
-      "簽帳金融卡與一般信用卡/金融卡有何不同？ \n",
-      "收到續卡之簽帳金融卡，如何開卡?\n",
-      "簽帳金融卡之繳款方式為何？\n",
-      "使用簽帳金融卡需要收取年費嗎？\n",
-      "簽帳金融卡晶片密碼連續輸入錯誤而被鎖卡時，如何處理？\n",
-      "簽帳金融卡有使用期限嗎？ \n",
-      "中國信託分行/ATM據點?\n",
-      "請問營業時間?\n",
-      "各項服務手續費？\n",
-      "什麼是海外帳戶？\n",
-      "我該購屋還是租屋?\n",
-      "我需要準備多少自備款?\n",
-      "好不容易存了一桶金！掂掂我的存款…我買得起多少總價的房子呢？\n",
-      "買房子是人生重大決定！我該如何面面俱到？\n",
-      "終於來到買賣契約簽訂階段了，有什麼要注意的嗎？\n",
-      "房貸選擇這麼多種，到底哪種才適合我呢？\n",
-      "沒有申請過房貸耶…相關流程會不會很複雜？\n",
-      "購屋時需負擔哪些費用？\n",
-      "銀行是如何決定我的貸款年利率和貸款成數?\n",
-      "聽說房貸利率可分為機動計息和固定計息？差別是什麼？\n",
-      "什麼是定儲利率指數？\n",
-      "本息均攤還款和本金均攤還款有什麼不一樣？\n",
-      "申辦房貸是個重要的決定…有限制多久時間以內要清償借款嗎？\n",
-      "什麼是寬限期？寬限標的是什麼？\n",
-      "如果借款期間發生意外無法如期支付借款，怎麼辦？\n",
-      "申辦房貸需要支付什麼費用嗎？\n",
-      "如何進一步了解貸款細節？\n",
-      "如何繳款？\n",
-      "如何查詢目前每月應繳的貸款金額？\n",
-      "我的房貸採用機動計息，我該如何知道目前定儲利率指數為多少?\n",
-      "理財型房貸不動用不計息也就不用還款，那如果我有動用額度，請問會有人通知我還款嗎？\n",
-      "貸款期間是否可以部份還款？如果提前清償貸款是否會有違約金？\n",
-      "請問什麼是「個人信貸」?\n",
-      "申請「個人信貸」需要有保證人嗎? \n",
-      "我應該申請哪種貸款？\n",
-      "「循環型信貸」是什麼？和「分期型信貸」有什麼不同呢？\n",
-      "借款期限多久?\n",
-      "我可以借到多少錢？\n",
-      "透過代辦公司會有比較高的額度嗎？\n",
-      "申請「個人信貸」需要事先到中國信託開戶嗎？或一定要將款項匯到中國信託的戶頭嗎?\n",
-      "我想進一步了解貸款商品，可以透過什麼連絡管道呢?\n",
-      "申請個人信貸需要準備什麼文件嗎？\n",
-      "成功申辦「分期型信貸」後，需要負擔哪些費用？（詳依本行最新公告為準）\n",
-      "辦貸款會有哪些費用？（詳依本行最新公告為準）\n",
-      "貸款年利率如何計算？\n",
-      "什麼是定儲利率定價指數？\n",
-      "申請後需要多久才會知道是否申請成功？ \n",
-      "想詢問申辦進度，可以透過什麼連絡管道呢?\n",
-      "申辦個人信貸成功後，資金什麼時候會撥入帳戶？\n",
-      "我可以指定信貸款項撥款日期嗎？\n",
-      "申辦「循環型信貸」成功後，該如何動用額度？\n",
-      "我要如何知道「分期型信貸」每期應繳款金額？\n",
-      "我要如何知道「循環型信貸」每期應繳款金額？\n",
-      "我如何知道利率變動後的新利率及應還款金額?\n",
-      "可以透過哪些管道來還款呢?\n",
-      "我想辦理自動扣繳，請問應如何申請？\n",
-      "我沒有中國信託存款帳戶，能否用其他銀行的存款帳號扣繳信貸款項？\n",
-      "辦理ACH代扣繳業務需要多久時間呢?\n",
-      "雖然「分期型信貸」每月都有「每月還款金額」的規定，請問我可以提前一次還清嗎?\n",
-      "Q：如何成為財富管理客戶?\n",
-      "Q：請問點數可以兌換什麼東西?\n",
-      "Q：兌換點數是否要加入【台灣利樂】會員?是否要有本行網銀密碼?\n",
-      "Q：於【台灣利樂】網路兌換商品，何時可收到商品?\n",
-      "Q：如何與【台灣利樂】客服中心聯絡?\n",
-      "Q：於【台灣利樂】兌換商品時，如何取得產品?\n",
-      "Q：請問如何查詢我的訂單資料呢?\n",
-      "Q：如何知道我是否訂購成功了呢?\n",
-      "Q：自費購買或點數不足需補差額時應何時繳費？可用什麼方式付款？\n",
-      "Q：網路銀行的好處？\n",
-      "Q：網路銀行服務要如何申請呢？\n",
-      "Q：網路密碼設定是否有限制？\n",
-      "Q：如何保護您的密碼安全\n",
-      "Q：登入網路銀行時，輸入錯誤的使用者帳號或網銀密碼超過多少次會被上鎖?\n",
-      "Q：為什麼我的網路銀行會自動登出?\n",
-      "Q：我可以查詢多久以前的存款明細？\n",
-      "Q：如何才能使用網路轉帳功能？轉出帳號是否要約定?\n",
-      "Q：網路銀行可以設定幾個約定轉出/入帳號？\n",
-      "Q：若是要增加約定轉出或轉入帳號該如何做？\n",
-      "Q：網路銀行轉帳之手續費如何計算？\n",
-      "Q：請問繳費中心涵蓋哪些？需要額外支付手續費嗎？\n",
-      "Q：為何我有海外帳戶，可是無法在網路銀行查詢到我的海外帳戶資料？\n",
-      "Q：網路銀行可以進行哪些海外帳戶的相關資訊？\n",
-      "Q：為何連線到網路銀行時出現憑證已過期\n",
-      "Q：為何五分鐘自動登出前沒有跳出提醒的倒數計時畫面？╱WEB ATM點選查詢明細後，畫面跳一下就回到原畫面？╱點選財富點兌換後，回到原畫面沒有動靜？\n",
-      "Q：我是首次登入，要如何進入註冊程序？\n",
-      "Q：我忘記帳號/密碼或是密碼被鎖，該怎麼辦?\n",
-      "Q：何謂「簡訊動態密碼（簡訊OTP）One Time Password」?\n",
-      "Q：請問如何申請網銀非約定轉帳(OTP)功能？\n",
-      "Q：請問「簡訊OTP」密碼是否有錯誤次數限制呢?\n",
-      "Q：當我執行非約定轉帳交易收不到簡訊動態密碼時，怎麼辦?\n",
-      "Q：請問我所接收OTP簡訊及已辦理設備認證的手機遺失了，該怎麼辦?\n",
-      "Q：請問接收「簡訊動態密碼（簡訊OTP）」是否需要額外付費呢?\n",
-      "Q：請問接收「簡訊OTP密碼」之行動電話號碼是否可設定為國外門號？\n",
-      "Q：請問我沒有於網路銀行執行網銀交易(如：轉帳、基金等)，怎麼會接收到以貴行名義\"發送的「簡訊OTP」密碼呢?\"\n",
-      "Q：下載中信Home Bank APP的設備有什麼限制嗎？\n",
-      "Q：使用中信Home Bank APP是安全的嗎？是否有安全上的疑慮？\n",
-      "Q：我已經是中信的網路銀行會員了，是否需要另外申請行動銀行\n",
-      "Q：網路銀行與行動銀行登錄的使用者代號跟密碼是一樣的嗎?\n",
-      "Q：為何IPAD在APP STORE找不到中信Home Bank APP可下載 \n",
-      "Q：中信Home Bank APP有哪些功能？\n",
-      "Q：為何我無法使用網路銀行「台外幣/外幣轉帳」功能？有什麼身份限制嗎？\n",
-      "Q：「台外幣/外幣轉帳」可否預約轉帳？\n",
-      "Q：「台外幣/外幣轉帳」轉出及轉入帳號有無限制？\n",
-      "Q：「台外幣/外幣轉帳」交易金額有無限制？\n",
-      "Q：什麼時間可以做網銀/行動銀行換匯交易？\n",
-      "Q：什麼是「匯率到價提醒」服務？\n",
-      "Q：請問中信有哪些地方有放置ATM？\n",
-      "Q：在ATM存款有金額限制嗎？\n",
-      "Q：中國信託的轉帳代碼是多少?如要何透過ATM轉帳至中國信託呢?\n",
-      "Q：晶片金融卡插入ATM後，為何無轉帳可選，只出現信用卡預借現金及國際金融卡提款之選項？\n",
-      "Q：ATM 故障異常無法使用該怎麼辦？\n",
-      "Q：於ATM交易時發生異常，如吃卡、扣帳不吐鈔…等情況或交易時ＡＴＭ突然當機？\n",
-      "Q：請問ATM最新的優惠活動在哪裡可以查到？\n",
-      "Q：存摺遭補摺機咬摺應該如何處理？\n",
-      "Q：何謂設備認證(綁定)?\n",
-      "Q：我要如何申請設備認證功能?\n",
-      "Q：如何使用設備認證進行非約定轉帳?\n",
-      "Q：申請設備驗證碼後，多久內需完成設備綁定？\n",
-      "Q：使用網路ATM安全嗎？\n",
-      "Q：使用網路ATM是否需事先申請？如何使用？\n",
-      "Q：其他行庫的晶片金融卡也可以在中國信託「網路ATM」上使用嗎？\n",
-      "Q：網路ATM有哪些功能？\n",
-      "Q：網路ATM轉帳金額是否有限制\n",
-      "Q：網路ATM轉帳交易的入帳時間為何？ \n",
-      "Q：我的讀卡機驅動程式已遺失或連結網路ATM出現「初始化WINSCARD.DLL失敗」訊息，該怎麼辦？\n",
-      "Q：使用網路ATM轉帳成功，但卻未入帳時我該怎麼辦？\n",
-      "Q：如何申請使用電話銀行?\n",
-      "Q：電話銀行(語音)提供那些功能?\n",
-      "Q：如何快速在電話銀行(語音)查餘額或轉帳?\n"
+      "那我\n",
+      "我們\n",
+      "們酸\n",
+      "酸民\n",
+      "民婉\n",
+      "婉君\n",
+      "君也\n",
+      "也可\n",
+      "可以\n",
+      "以報\n",
+      "報名\n",
+      "名嗎\n"
      ]
     }
    ],
    "source": [
-    "from bs4 import BeautifulSoup\n",
-    "soup = BeautifulSoup(res.text, 'lxml')\n",
-    "#for q in soup.select('.eventgoldtitle02 strong'):\n",
-    "for q in soup.select('.style01-1'):\n",
-    "    print(q.text)"
+    "#for i in range(0,13 - 2 + 1 ):\n",
+    "for i in range(0,len(sentence) - 2 + 1 ):\n",
+    "    print(sentence[i:i+2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "那我們\n",
+      "我們酸\n",
+      "們酸民\n",
+      "酸民婉\n",
+      "民婉君\n",
+      "婉君也\n",
+      "君也可\n",
+      "也可以\n",
+      "可以報\n",
+      "以報名\n",
+      "報名嗎\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,len(sentence) - 3 + 1 ):\n",
+    "    print(sentence[i:i+3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ngram(input_sentence,n=2):\n",
+    "    ret = []\n",
+    "    for i in range(0,len(input_sentence) - n + 1):\n",
+    "        ret.append(input_sentence[i:i+n])\n",
+    "    return ret\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = '''\n",
+    "全球080就是國際性080免付費服務電話。相同於080-024-365為免付費服務電話，您可透過此080電話從國外地區直接與我們聯絡，並由本行承擔所有的通話費用，稍有差別的是080-024-365僅限於台灣地區使用，而全球 080則於國外地區使用。\n",
+    "您可於當地直接撥當地之免費撥接號碼，不進入語音系統，不需輸入任何卡號或密碼。\n",
+    "註：手機無法撥打全球080，請儘量使用當地室內電話撥打全球080專線。\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "c = Counter(ngram(a,2))\n",
+    "#c.most_common()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "c = Counter(ngram(a,3))\n",
+    "#c.most_common()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "delimiter = \"，|。\"  \n",
+    "text = '''全球080就是國際性080免付費服務電話。相同於080-024-365為免付費服務電話，您可透過此080電話從國外地區直接與我們聯絡，並由本行承擔所有的通話費用，稍有差別的是080-024-365僅限於台灣地區使用，而全球 080則於國外地區使用。'''\n",
+    "sentenceAry = []\n",
+    "for i in re.split(delimiter, text):\n",
+    "    sentenceAry.append(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def removeKey(text, keywords):\n",
+    "    ret = text\n",
+    "    for word in keywords:\n",
+    "        ret = ret.replace(word, '')\n",
+    "    return ret\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'比特幣 美上市'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = '比特幣期貨 美核准上市'\n",
+    "removeKey(a, ['期貨', '核准'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keywords = [] \n",
+    "for n in range(4,1, -1):\n",
+    "    words = []\n",
+    "    for sentence in sentenceAry:\n",
+    "        text_list = removeKey(sentence, keywords)\n",
+    "        words.extend(ngram(text_list, n))\n",
+    "        \n",
+    "    c = Counter(words)\n",
+    "    for word, cnt in c.items():\n",
+    "        if cnt >= 3:\n",
+    "            keywords.append(word)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['080', '電話', '地區']"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keywords"
    ]
   },
   {
