--- a/Demo20181220.ipynb
+++ b/Demo20181220.ipynb
@@ -443,6 +443,151 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = []\n",
+    "#ctbc_qa['question'].tolist()\n",
+    "res.extend(ctbc_qa['question'].tolist() )\n",
+    "res.extend(ctbc_qa['answer'].tolist() )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = ' '.join(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "delimiter = \"，|。|\\?|\\？| |\\(|\\)|「|」|/|【|】|：|╱\"  \n",
+    "sentenceAry = []\n",
+    "for i in re.split(delimiter, text):\n",
+    "    if len(i)>0:\n",
+    "        sentenceAry.append(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keywords = [] \n",
+    "for n in range(9,1, -1):\n",
+    "    words = []\n",
+    "    for sentence in sentenceAry:\n",
+    "        text_list = removeKey(sentence, keywords)\n",
+    "        words.extend(ngram(text_list, n))\n",
+    "        \n",
+    "    c = Counter(words)\n",
+    "    for word, cnt in c.items():\n",
+    "        if cnt >= 30:\n",
+    "            keywords.append(word)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('userdict.txt', 'a') as f:\n",
+    "    for w in keywords:\n",
+    "        m = re.match('^[\\u4e00-\\u9fa5]+$', w)\n",
+    "        if m:\n",
+    "            f.write(w+'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['柯文哲 為 了 大巨蛋 一事 找 趙藤雄 算帳', '柯P 將不在 大巨蛋 舉辦 世運會']"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import jieba\n",
+    "jieba.load_userdict('userdict.txt')\n",
+    "\n",
+    "a = ['柯文哲為了大巨蛋一事找趙藤雄算帳', '柯P將不在大巨蛋舉辦世運會']\n",
+    "\n",
+    "corpus = [' '.join(jieba.cut(s)) for s in a]\n",
+    "corpus\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "vectorizer = CountVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['一事', '世運會', '大巨蛋', '將不在', '柯p', '柯文哲', '算帳', '舉辦', '趙藤雄']"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorizer.get_feature_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<2x9 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 10 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
