--- a/Demo20181220.ipynb
+++ b/Demo20181220.ipynb
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
        "['柯文哲 為 了 大巨蛋 一事 找 趙藤雄 算帳', '柯P 將不在 大巨蛋 舉辦 世運會']"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
        "['一事', '世運會', '大巨蛋', '將不在', '柯p', '柯文哲', '算帳', '舉辦', '趙藤雄']"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -577,13 +577,399 @@
        "\twith 10 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = []\n",
+    "for q in ctbc_qa['question'].tolist():\n",
+    "    corpus.append(' '.join(jieba.cut(q)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = [' '.join(jieba.cut(q)) for q in ctbc_qa['question'].tolist()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "vectorizer = CountVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(vectorizer.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "synonym_dic = {}\n",
+    "with open('synonym.txt', 'r') as f:\n",
+    "    for line in f:\n",
+    "        fields = line.strip().split('/')\n",
+    "        for field in fields[1:]:\n",
+    "            synonym_dic[field] = fields[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SynonymCountVectorizer(CountVectorizer):\n",
+    "    def build_analyzer(self):\n",
+    "        analyzer = super(SynonymCountVectorizer, self).build_analyzer()\n",
+    "        return lambda doc: (synonym_dic.get(w, w) for w in analyzer(doc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorizer = SynonymCountVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)\n",
+    "#print(vectorizer.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Distance Calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4142135623730951"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import math\n",
+    "a = np.array([1,0,1,1,1])\n",
+    "b = np.array([1,1,1,0,1])\n",
+    "math.sqrt(sum((a - b) ** 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 1.41421356],\n",
+       "       [1.41421356, 0.        ]])"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics.pairwise import euclidean_distances\n",
+    "euclidean_distances([a,b])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title   = '銀行業去年平均年薪　兆豐223萬奪冠'\n",
+    "content = '立委曾銘宗在今天財委會上，出具一份數據，去年全體銀行員工平均薪資中，以兆豐銀平均每位員工薪資達223.4萬元居冠，打敗中信銀的203.6萬元，而全體平均37家銀行員工平均薪資是142.9萬元，但最後一名銀行的平均員工薪資是82.8萬元，和最高的兆豐銀、高低差距了2.69倍，也與平均薪資差了1.72倍' \n",
+    "\n",
+    "corpus2 = [' '.join(jieba.cut(title)), ' '.join(jieba.cut(content))]\n",
+    "vectorizer2 = CountVectorizer()\n",
+    "X2 = vectorizer2.fit_transform(corpus2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 9.38083152],\n",
+       "       [9.38083152, 0.        ]])"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "euclidean_distances(X2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.75"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([1,0,1,1,1])\n",
+    "b = np.array([1,1,1,0,1])\n",
+    "(a * b).sum() / (math.sqrt((a ** 2).sum()) * math.sqrt((b ** 2).sum()) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.  , 0.75],\n",
+       "       [0.75, 1.  ]])"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_distances, cosine_similarity\n",
+    "cosine_similarity([a,b])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.  , 0.25],\n",
+       "       [0.25, 0.  ]])"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cosine_distances([a,b])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cs = cosine_distances(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(324, 324)"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入你的問題：我想要開戶，請問我該準備哪些文件\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input = input('請輸入你的問題：')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = [' '.join(jieba.cut(user_input))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_vec = vectorizer.transform(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<1x724 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 7 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 233,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cs = cosine_distances(user_vec,X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 324)"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "140"
+      ]
+     },
+     "execution_count": 236,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cs.argsort()[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "question                                           開戶應攜帶什麼文件?\n",
+       "answer      只要您持有本行信用卡正卡，且您的車輛已有申請eTag服務，就可以申請信用卡代扣繳eTag自動...\n",
+       "Name: 140, dtype: object"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ctbc_qa.iloc[cs.argsort()[0][0]]"
    ]
   },
   {
